<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_splash"
    tools:context=".SigninActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/hospital"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/myapotek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="317dp"
        android:layout_height="340dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_btn_linier_signin"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="21dp"
        android:paddingRight="24dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mlight"
            android:text="@string/username"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/xusername"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:background="@drawable/bg_edit_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mlight"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/xpassword"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_marginBottom="30dp"
            android:singleLine="true"
            android:background="@drawable/bg_edit_text" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/bg_btn_signin"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/create_new_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_new_account"
            android:textSize="17sp" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>