<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dashboard"
    tools:context=".DashboardActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:background="@drawable/header_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:src="@drawable/maps"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/mregular"
        android:text="@string/location"
        android:textColor="@color/hitam"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:background="@color/hitam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />



    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo_header_new"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/menu_utama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/crimson_bold"
        android:text="@string/dashboard"
        android:textColor="@color/hitam"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="325dp"
        android:layout_height="145dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:paddingStart="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_utama">

        <LinearLayout
            android:id="@+id/btn_daftar_obat"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/bg_menu_dashboard"
            android:orientation="vertical">

            <ImageView
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/drug" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/crimson_roman"
                android:text="@string/daftar_obat"
                android:textColor="@color/hitam"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_tambah_obat"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/bg_menu_dashboard"
            android:orientation="vertical">

            <ImageView
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/medicine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/crimson_roman"
                android:text="@string/tambah_obat"
                android:textColor="@color/hitam"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="145dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:paddingStart="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:id="@+id/btn_sign_out"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/bg_menu_dashboard"
            android:orientation="vertical">

            <ImageView
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/exit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/crimson_roman"
                android:layout_marginTop="10dp"
                android:text="@string/sign_out"
                android:textColor="@color/hitam"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bnt_laporan"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_menu_dashboard"
            android:orientation="vertical">

            <ImageView
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/report" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/crimson_roman"
                android:text="@string/history"
                android:textColor="@color/hitam"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>







</android.support.constraint.ConstraintLayout>